--- a/index.html
+++ b/index.html
@@ -14,69 +14,229 @@
             <div>
                 <header class="swatch"></header>
                 <footer>
-                    <h2 class="color-name"></h2>
-                    <p class="color-hex"></p>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
                 </footer>
             </div>
             <div>
-                <header class="swatch"></header>
-                <footer>
-                    <h2 class="color-name"></h2>
-                    <p class="color-hex"></p>
-                </footer>
             </div>
             <div>
-                <header class="swatch"></header>
-                <footer>
-                    <h2 class="color-name"></h2>
-                    <p class="color-hex"></p>
-                </footer>
             </div>
             <div>
-                <header class="swatch"></header>
-                <footer>
-                    <h2 class="color-name"></h2>
-                    <p class="color-hex"></p>
-                </footer>
             </div>
             <div>
-                <header class="swatch"></header>
-                <footer>
-                    <h2 class="color-name"></h2>
-                    <p class="color-hex"></p>
-                </footer>
             </div>
             <div>
-                <header class="swatch"></header>
-                <footer>
-                    <h2 class="color-name"></h2>
-                    <p class="color-hex"></p>
-                </footer>
             </div>
             <div>
-                <header class="swatch"></header>
-                <footer>
-                    <h2 class="color-name"></h2>
-                    <p class="color-hex"></p>
-                </footer>
             </div>
             <div>
-                <header class="swatch"></header>
-                <footer>
-                    <h2 class="color-name"></h2>
-                    <p class="color-hex"></p>
-                </footer>
             </div>
             <div>
-                <header class="swatch"></header>
-                <footer>
-                    <h2 class="color-name"></h2>
-                    <p class="color-hex"></p>
-                </footer>
             </div>
         </section>
+
+        <section>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+        </section>
+
+
+        <section>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+        </section>
+
+
+        <section>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+        </section>
+
+
+        <section>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+        </section>
+
+
+        <section>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+        </section>
+
+
+        <section>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+        </section>
+
+
+        <section>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+        </section>
+
+
+        <section>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
+        </section>
+
     </main>
-    <aside class="last"></aside>
+    <footer>
+        <aside id="selected-colors">
+            <p>
+                No selected colors
+            </p>
+        </aside>
+        <aside>
+            <button disabled id="copy">
+                Copy selected colors to clipboard
+            </button>
+            <button id="reload">
+                Reload colors
+            </button>
+            <button id="clear">
+                Clear selection
+            </button>
+        </aside>
+    </footer>
+
+    <svg width="200" height="200" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <rect width="200" height="200" rx="4" fill="#C4C4C4" />
+    </svg>
+
+
+
     <script src="script.js"></script>
 </body>
 
