temporarily remove experimental markup

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <main>
         <section>
             <div>
-                <header class="swatch"></header>
+                <!-- <header class="swatch"></header>
                 <footer>
                     <h2 class="name">test</h2>
                     <code class="hex">test</code>
-                </footer>
+                </footer> -->
             </div>
             <div>
             </div>
