it's broken, but it's the beginning of 2.0

--- a/index.html
+++ b/index.html
@@ -10,204 +10,189 @@
 <body>
     <aside class="first"></aside>
     <main>
-        <section>
-            <div>
-                <!-- <header class="swatch"></header>
+        <section class="column">
+            <div class="container">
+                <header class="color"></header>
                 <footer>
                     <h2 class="name">test</h2>
                     <code class="hex">test</code>
-                </footer> -->
+                </footer>
             </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-        </section>
-
-        <section>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
         </section>
-
-
-        <section>
-            <div>
+        <section class="column">
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-        </section>
-
-
-        <section>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
         </section>
-
-
-        <section>
-            <div>
+        <section class="column">
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-        </section>
-
-
-        <section>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
         </section>
-
-
-        <section>
-            <div>
+        <section class="column">
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-        </section>
-
-
-        <section>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
         </section>
-
-
-        <section>
-            <div>
+        <section class="column">
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
-            </div>
-            <div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
             </div>
         </section>
 
