--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8" />
     <title>Color Compadre</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <aside class="first"></aside>
+    <h1>colorCompadre(🏳‍🌈)</h1>
     <main>
         <section class="column">
             <div class="container">
@@ -46,7 +47,23 @@
                     <code class="hex">test</code>
                 </footer>
             </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
         </section>
+
+
         <section class="column">
             <div class="container">
                 <header class="color"></header>
@@ -83,7 +100,23 @@
                     <code class="hex">test</code>
                 </footer>
             </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
         </section>
+
+
         <section class="column">
             <div class="container">
                 <header class="color"></header>
@@ -120,7 +153,23 @@
                     <code class="hex">test</code>
                 </footer>
             </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
         </section>
+
+
         <section class="column">
             <div class="container">
                 <header class="color"></header>
@@ -157,8 +206,144 @@
                     <code class="hex">test</code>
                 </footer>
             </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
         </section>
+
+
         <section class="column">
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+        </section>
+
+
+        <section class="column">
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+        </section>
+
+
+        <section class="column">
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
+            <div class="container">
+                <header class="color"></header>
+                <footer>
+                    <h2 class="name">test</h2>
+                    <code class="hex">test</code>
+                </footer>
+            </div>
             <div class="container">
                 <header class="color"></header>
                 <footer>
@@ -197,7 +382,7 @@
         </section>
 
     </main>
-    <footer>
+    <!-- <footer>
         <aside id="selected-colors">
             <p>
                 No selected colors
@@ -214,7 +399,7 @@
                 Clear selection
             </button>
         </aside>
-    </footer>
+    </footer> -->
 
     <!-- <svg width="200" height="200" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
         <rect width="200" height="200" rx="4" fill="#C4C4C4" />
