minor adjustments and reimplementation of silly dark mode

--- a/index.html
+++ b/index.html
@@ -10,21 +10,19 @@
 </head>
 
 <body>
-    <h1>colorCompadre(🏳‍🌈)</h1>
     <header>
-        <!-- <aside id="selected-colors">
-            <p>
-                No selected colors
-            </p>
-        </aside> -->
+        <h1>colorCompadre</h1>
         <aside>
-            <!-- <label for="darkmodetoggle">Dark Mode</label>
-            <input type="checkbox" id="darkmodetoggle"> -->
+            <label for="darkmodetoggle">Dark Mode</label>
+            <input type="checkbox" id="darkmodetoggle" unchecked>
             <button id="reload">
                 Reload colors
             </button>
             <button disabled id="copy">
-                Copy selected colors to clipboard
+                Copy hex
+            </button>
+            <button disabled id="copySVG">
+                Copy SVG
             </button>
             <button disabled id="clear">
                 Clear selection
